# 2025ESWContest_free_1006

./: .gitattributes  README.md
HW/: BnW 외관 및  소자 배치 모델링.stl  HC-SR04_bracket.f3d  HC-SR04_bracket.stl  cam_bracket.f3d  cam_bracket.stl  end.f3d  end.stl  fillet.f3d  fillet.stl  motor_bracket.f3d  motor_bracket.stl  proto_wheel.f3d  proto_wheel_.stl  roarm_bracket.f3d  roarm_bracket.stl  trashcan.f3d  trashcan.stl  uwb_shield.f3d  uwb_shield.stl  wiping_stick.f3d  wiping_stick.stl
SW/: SW_Description
SW/App/: notification_log.dart  user_info.dart
SW/App/project_bnw/: README.md  pubspec.yaml  replace.dart
SW/App/project_bnw/android/app/: build.gradle.kts
SW/App/project_bnw/android/app/src/main/: AndroidManifest.xml
SW/App/project_bnw/ios/Runner/: Info.plist
SW/App/project_bnw/ios/Runner.xcodeproj/: project.pbxproj
SW/App/project_bnw/lib/: final_main_home.dart  main.dart  main_home.dart
SW/App/project_bnw/lib/User/: login.dart  register.dart
SW/App/project_bnw/test/: widget_test.dart
SW/App/project_bnw/web/: index.html  manifest.json
SW/Jetson/: bno055_calibration.json  map.pgm  map.yaml
SW/Jetson/drive_pkg/: CMakeLists.txt  package.xml
SW/Jetson/drive_pkg/action/: NavigateUwbPose.action
SW/Jetson/drive_pkg/launch/: drive_launch.py
SW/Jetson/drive_pkg/src/: controller_node.cpp  go_home_node.cpp  goal_server_node.cpp  map_to_odom_tf_broadcaster.cpp  planner_node.cpp
SW/Jetson/esw_pkg/: package.xml  setup.cfg  setup.py
SW/Jetson/esw_pkg/launch/: esw_launch.py
SW/Jetson/navigate_server/: package.xml  setup.cfg  setup.py
SW/Jetson/navigate_server/navigate_server/: jetson_server_node.py
SW/Jetson/roarm_ws_em0/install/: local_setup.sh  setup.sh
SW/Jetson/roarm_ws_em0/install/launch_api/share/launch_api/: package.sh
SW/Jetson/roarm_ws_em0/install/moveit_servo/lib/: libmoveit_servo_lib.so.2.5.5  libmoveit_servo_lib_parameters.so.2.5.5
SW/Jetson/roarm_ws_em0/install/moveit_servo/lib/moveit_servo/: fake_command_publisher  servo_node_main  servo_pose_tracking_demo
SW/Jetson/roarm_ws_em0/install/moveit_servo/share/moveit_servo/: package.sh
SW/Jetson/roarm_ws_em0/install/moveit_servo/share/moveit_servo/cmake/: export_moveit_servoExport-release.cmake
SW/Jetson/roarm_ws_em0/install/roarm_description/share/roarm_description/: local_setup.sh  package.sh
SW/Jetson/roarm_ws_em0/install/roarm_description/share/roarm_description/meshes/: base_link.STL  link3.STL
SW/Jetson/roarm_ws_em0/install/roarm_driver/share/roarm_driver/: package.sh  package.xml
SW/Jetson/roarm_ws_em0/install/roarm_moveit/share/roarm_moveit/: package.sh  package.xml
SW/Jetson/roarm_ws_em0/install/roarm_moveit/share/roarm_moveit/cmake/: export_roarm_moveit__rosidl_generator_cExport-noconfig.cmake  export_roarm_moveit__rosidl_generator_cExport.cmake  export_roarm_moveit__rosidl_generator_cppExport.cmake  (+10 more)
SW/Jetson/roarm_ws_em0/install/roarm_moveit_cmd/lib/roarm_moveit_cmd/: getposecmd  getposecmd_tf2  keyboardcontrol  movecirclecmd  movepointcmd  setgrippercmd  webappcontrol
SW/Jetson/roarm_ws_em0/install/roarm_moveit_cmd/share/roarm_moveit_cmd/: package.sh
SW/Jetson/roarm_ws_em0/install/roarm_moveit_ikfast_plugins/share/roarm_moveit_ikfast_plugins/: local_setup.sh  package.sh
SW/Jetson/roarm_ws_em0/install/roarm_web_app/share/roarm_web_app/: package.sh
SW/Jetson/roarm_ws_em0/install/ros2web/share/ros2web/: package.sh
SW/Jetson/roarm_ws_em0/install/ros2web_app/share/ros2web_app/: package.sh
SW/Jetson/roarm_ws_em0/install/ros2web_example_py/share/ros2web_example_py/: package.sh
SW/Jetson/roarm_ws_em0/install/ros2web_interfaces/share/ros2web_interfaces/: package.sh
SW/Jetson/roarm_ws_em0/install/ros2web_widgets/share/ros2web_widgets/: package.sh
SW/Jetson/roarm_ws_em0/log/: latest_build
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_description/meshes/: gripper_link.STL  link1.STL  link2.STL
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_driver/: setup.py
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_driver/launch/: roarm_launch.py
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_moveit/srv/: MovePointCmd.srv
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_moveit_cmd/: CMakeLists.txt
SW/Jetson/roarm_ws_em0/src/roarm_main/roarm_moveit_cmd/src/: getposecmd_tf2.cpp  movepointcmd.cpp  setgrippercmd.cpp
SW/Jetson/sensor_pkg/: CMakeLists.txt  package.xml
SW/Jetson/sensor_pkg/include/sensor_pkg/: bno055.hpp
SW/Jetson/sensor_pkg/launch/: sensor_launch.py
SW/Jetson/sensor_pkg/src/: MDControl.cpp  battery_reader_node.cpp  bno055.cpp  imu_node.cpp  obstacle_detector_node.cpp  odom_publisher.cpp  ultrasonic_parser_node.cpp  uwb_offset_node.cpp  uwb_tf_broadcaster.cpp  uwb_to_ros.cpp
SW/Jetson/sensor_pkg/src/Arduino_CODE/MD_Arduino/: MD_Arduino.ino
SW/Jetson/sensor_pkg/src/Arduino_CODE/battery/: battery.ino
SW/Jetson/sensor_pkg/src/Arduino_CODE/stepper_bridge/: stepper_bridge.ino
SW/Jetson/sensor_pkg/src/Arduino_CODE/ultrasonic/: ultrasonic.ino
SW/Jetson/table_pkg/: package.xml  setup.cfg  setup.py
SW/Jetson/table_pkg/install/: local_setup.sh  setup.sh
SW/Jetson/table_pkg/install/table_pkg/lib/table_pkg/: dirt_check_client_node  dirt_check_node  table_align_client_node  table_align_node  table_manager_node
SW/Jetson/table_pkg/install/table_pkg/share/table_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
SW/Jetson/table_pkg/install/table_pkg/share/table_pkg/model/: dirt_classifier.pt
SW/Jetson/table_pkg/launch/: table_cleaning_sys.py
SW/Jetson/table_pkg/table_pkg/: camera_stream_node.py  dirt_check_node.py  table_align_node.py  table_cleaning_bridge.py  table_manager_node.py
SW/Jetson/table_pkg/table_pkg/model/: dirt_classifier.pt  dirt_classifier_28.pt
SW/Server/: yolo_detect_server(Local).py
SW/Server/fastapi_ws(Local)/: best.pt
SW/Server/fastapi_ws(Local)/fastapi-env/Scripts/: activate  activate.bat
SW/Server/uvicorn_ws(Main)/: main_server.py
SW/Web/: TableMapping.css  TableMapping.tsx
SW/Web/table-mapper/: package-lock.json  package.json
SW/Web/table-mapper/src/: App.tsx
(+19 files in other folders)
