<?xml version="1.0"?>
<package format="3">
  <name>navigate_server</name>
  <version>0.0.1</version>
  <description>FastAPI-integrated ROS 2 action client that sends goals via drive_pkg's NavigateUwbPose action</description>

  <maintainer email="atyy021127@konkuk.ac.kr">Changgyu Lee</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>rclpy_action</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>drive_pkg</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclpy_action</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>drive_pkg</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

